<resources>
    <string name="app_name">PackageHelper</string>
    <string name="rdo_HelpMe">帮我</string>
    <string name="rdo_Home">首页</string>
    <string name="rdo_HelpYou">帮你</string>
    <!--新版登录专用-->
    <string name="login" translatable="false">登录</string>
    <string name="login_input_username_hint" translatable="false">用户名</string>
    <string name="hint_password" translatable="false">密码</string>
    <string name="login_hold_hint" translatable="false">自动登录</string>
    <string name="login_forget_hint" translatable="false">忘记密码？</string>
    <string name="login_register_hint" translatable="false">注册</string>
    <string name="login_other_hint" translatable="false">其他方式登录</string>
    <string name="register_input_username_hint" translatable="false">手机号</string>
    <string name="register_username_hint" translatable="false">用户名</string>
    <string name="register_sms_auth_code" translatable="false">短信验证码</string>
    <string name="register_sms_hint" translatable="false">获取验证码</string>
    <string name="register_sms_wait_hint" translatable="false">别激动,休息一下呗&#8230;</string>

    <string name="loading_image" translatable="false">正在准备图片...</string>
    <string name="register_done_hint" translatable="false">完成</string>
    <string name="register_man_hint" translatable="false">男士</string>
    <string name="register_female_hint" translatable="false">女士</string>
    <string name="retrieve_pwd_step_hint" translatable="false">下一步</string>
    <string name="retrieve_pwd_email_label_one" translatable="false">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label" translatable="false"><a>点击这里</a></string>
    <string name="reset_pwd_hint" translatable="false">请输入至少六位新密码</string>
    <string name="register_pwd_hint" translatable="false">请输入至少六位数密码</string>
    <string name="reset_pwd_submit" translatable="false">确认</string>
    <string name="message_pwd_error" translatable="false">密码错误</string>
    <string name="message_username_null" translatable="false">用户名未填写！！！</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
