<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/lay_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape1"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/ll_login_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="24dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_username_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_login_username" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/sandybrown"
                android:textColorHint="@color/sandybrown"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/iv_login_username_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_pwd_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_login_lock" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/sandybrown"
                android:textColorHint="@color/sandybrown"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/iv_login_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_login_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/bt_login_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_register_hint"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/sandybrown"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/ll_login_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/black" />


    </FrameLayout>

</FrameLayout>